--- a/package.json
+++ b/package.json
@@ -1,23 +1,31 @@
 {
-  "name": "Enocean",
-  "version": "0.0.2",
-  "description": "JavaScript Enocean library",
-  "main": "./lib/",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "name": "enocean.js",
+  "version": "0.0.3",
+  "description": "Library for communicating with enocean protocol",
+  "main": "./lib/index.js",
+  "directories": {
+    "test": "test"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/iUtvikler/Enocean.js.git"
+  "scripts": {
+    "start": "node lib/index",
+    "test": "mocha"
   },
   "keywords": [
-    "enocean",
-    "home-automation"
+    "enocean"
   ],
   "author": "Lars-Jørgen Kristiansen",
-  "license": "BSD",
+  "license": "MIT",
+  "devDependencies": {
+    "mocha": "^1.17.1",
+    "gulp-jshint": "^1.5.0",
+    "jshint-stylish": "^0.1.5",
+    "gulp-mocha": "^0.4.1",
+    "gulp": "^3.5.5",
+    "should": "^3.1.3",
+    "gulp-util": "^2.2.14"
+  },
   "dependencies": {
-    "binary": "0.3.0",
-    "serialport": "1.1.0"
+    "crc": "^0.2.1",
+    "buffertools": "^2.0.1"
   }
 }
