--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "start": "node lib/index",
     "test": "mocha"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/iUtvikler/Enocean.js.git"
+},
   "keywords": [
     "enocean"
   ],
