--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "node lib/index",
-    "test": "mocha"
+    "test": "mocha",
+    "coveralls": "istanbul cover _mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage"
   },
   "repository": {
     "type": "git",
@@ -25,8 +26,11 @@
     "jshint-stylish": "^0.1.5",
     "gulp-mocha": "^0.4.1",
     "gulp": "^3.5.5",
-    "should": "^3.1.3",
-    "gulp-util": "^2.2.14"
+    "gulp-util": "^2.2.14",
+    "mocha-lcov-reporter": "0.0.1",
+    "istanbul": "^0.2.6",
+    "jshint": "^2.4.4",
+    "coveralls": "^2.8.0"
   },
   "dependencies": {
     "crc": "^0.2.1",
