--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "coveralls": "^2.8.0"
   },
   "dependencies": {
-    "crc": "^0.2.1",
-    "buffertools": "^2.0.1"
+    "buffertools": "^2.0.1",
+    "crc": "^2.0.0"
   }
 }
